--liquibase formatted sql

--changeset codex:001-create-mvp-schema
CREATE TABLE users (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email VARCHAR(320) NOT NULL,
    password_hash VARCHAR(255) NOT NULL,
    display_name VARCHAR(120) NOT NULL,
    preferred_interface_language VARCHAR(10) NOT NULL DEFAULT 'es',
    status VARCHAR(30) NOT NULL DEFAULT 'ACTIVE',
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by BIGINT,
    updated_at TIMESTAMPTZ,
    updated_by BIGINT,
    deleted_at TIMESTAMPTZ,
    deleted_by BIGINT,
    CONSTRAINT uk_users_email UNIQUE (email)
);

CREATE TABLE roles (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(50) NOT NULL,
    name VARCHAR(100) NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by BIGINT,
    updated_at TIMESTAMPTZ,
    updated_by BIGINT,
    deleted_at TIMESTAMPTZ,
    deleted_by BIGINT,
    CONSTRAINT uk_roles_code UNIQUE (code)
);

CREATE TABLE user_roles (
    user_id BIGINT NOT NULL,
    role_id BIGINT NOT NULL,
    CONSTRAINT pk_user_roles PRIMARY KEY (user_id, role_id),
    CONSTRAINT fk_user_roles_user FOREIGN KEY (user_id) REFERENCES users (id),
    CONSTRAINT fk_user_roles_role FOREIGN KEY (role_id) REFERENCES roles (id)
);

CREATE TABLE shops (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    owner_user_id BIGINT NOT NULL,
    name VARCHAR(160) NOT NULL,
    description TEXT,
    contact_email VARCHAR(320),
    contact_phone VARCHAR(40),
    country VARCHAR(2) NOT NULL,
    currency VARCHAR(3) NOT NULL,
    default_reservation_expiration_hours INTEGER NOT NULL DEFAULT 48,
    logo_url VARCHAR(2048),
    status VARCHAR(30) NOT NULL DEFAULT 'ACTIVE',
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by BIGINT,
    updated_at TIMESTAMPTZ,
    updated_by BIGINT,
    deleted_at TIMESTAMPTZ,
    deleted_by BIGINT,
    CONSTRAINT fk_shops_owner_user FOREIGN KEY (owner_user_id) REFERENCES users (id),
    CONSTRAINT chk_shops_reservation_expiration_positive CHECK (default_reservation_expiration_hours > 0)
);

CREATE TABLE shop_members (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    shop_id BIGINT NOT NULL,
    user_id BIGINT NOT NULL,
    role VARCHAR(30) NOT NULL,
    status VARCHAR(30) NOT NULL DEFAULT 'ACTIVE',
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by BIGINT,
    updated_at TIMESTAMPTZ,
    updated_by BIGINT,
    deleted_at TIMESTAMPTZ,
    deleted_by BIGINT,
    CONSTRAINT fk_shop_members_shop FOREIGN KEY (shop_id) REFERENCES shops (id),
    CONSTRAINT fk_shop_members_user FOREIGN KEY (user_id) REFERENCES users (id),
    CONSTRAINT uk_shop_members_shop_user UNIQUE (shop_id, user_id)
);

CREATE TABLE product_categories (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(80) NOT NULL,
    name VARCHAR(120) NOT NULL,
    parent_id BIGINT,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by BIGINT,
    updated_at TIMESTAMPTZ,
    updated_by BIGINT,
    deleted_at TIMESTAMPTZ,
    deleted_by BIGINT,
    CONSTRAINT uk_product_categories_code UNIQUE (code),
    CONSTRAINT fk_product_categories_parent FOREIGN KEY (parent_id) REFERENCES product_categories (id)
);

CREATE TABLE master_products (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(240) NOT NULL,
    description TEXT,
    category_id BIGINT NOT NULL,
    franchise VARCHAR(160),
    collection_name VARCHAR(160),
    volume_number VARCHAR(50),
    publisher VARCHAR(160),
    isbn VARCHAR(20),
    ean VARCHAR(20),
    release_date DATE,
    edition_start_date DATE,
    edition_end_date DATE,
    product_language VARCHAR(10),
    is_limited_edition BOOLEAN NOT NULL DEFAULT FALSE,
    publication_countries JSONB NOT NULL DEFAULT '[]'::jsonb,
    cover_image_url VARCHAR(2048),
    status VARCHAR(30) NOT NULL DEFAULT 'ACTIVE',
    attributes JSONB NOT NULL DEFAULT '{}'::jsonb,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by BIGINT,
    updated_at TIMESTAMPTZ,
    updated_by BIGINT,
    deleted_at TIMESTAMPTZ,
    deleted_by BIGINT,
    CONSTRAINT fk_master_products_category FOREIGN KEY (category_id) REFERENCES product_categories (id)
);

CREATE TABLE product_suggestions (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    suggested_by_user_id BIGINT NOT NULL,
    name VARCHAR(240) NOT NULL,
    data JSONB NOT NULL DEFAULT '{}'::jsonb,
    status VARCHAR(30) NOT NULL DEFAULT 'PENDING',
    reviewed_by_user_id BIGINT,
    review_comment TEXT,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by BIGINT,
    updated_at TIMESTAMPTZ,
    updated_by BIGINT,
    deleted_at TIMESTAMPTZ,
    deleted_by BIGINT,
    CONSTRAINT fk_product_suggestions_suggested_by_user FOREIGN KEY (suggested_by_user_id) REFERENCES users (id),
    CONSTRAINT fk_product_suggestions_reviewed_by_user FOREIGN KEY (reviewed_by_user_id) REFERENCES users (id)
);

CREATE TABLE shop_products (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    shop_id BIGINT NOT NULL,
    master_product_id BIGINT NOT NULL,
    price_amount NUMERIC(12, 2) NOT NULL,
    currency VARCHAR(3) NOT NULL,
    stock_quantity INTEGER NOT NULL DEFAULT 0,
    commercial_status VARCHAR(30) NOT NULL DEFAULT 'AVAILABLE',
    physical_condition VARCHAR(30) NOT NULL,
    visible BOOLEAN NOT NULL DEFAULT TRUE,
    unit_number VARCHAR(50),
    total_limited_units INTEGER,
    notes TEXT,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by BIGINT,
    updated_at TIMESTAMPTZ,
    updated_by BIGINT,
    deleted_at TIMESTAMPTZ,
    deleted_by BIGINT,
    CONSTRAINT fk_shop_products_shop FOREIGN KEY (shop_id) REFERENCES shops (id),
    CONSTRAINT fk_shop_products_master_product FOREIGN KEY (master_product_id) REFERENCES master_products (id),
    CONSTRAINT chk_shop_products_price_non_negative CHECK (price_amount >= 0),
    CONSTRAINT chk_shop_products_stock_non_negative CHECK (stock_quantity >= 0),
    CONSTRAINT chk_shop_products_total_limited_units_positive CHECK (total_limited_units IS NULL OR total_limited_units > 0)
);

CREATE TABLE collections (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL,
    name VARCHAR(160) NOT NULL,
    description TEXT,
    visibility VARCHAR(20) NOT NULL DEFAULT 'PRIVATE',
    category_id BIGINT,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by BIGINT,
    updated_at TIMESTAMPTZ,
    updated_by BIGINT,
    deleted_at TIMESTAMPTZ,
    deleted_by BIGINT,
    CONSTRAINT fk_collections_user FOREIGN KEY (user_id) REFERENCES users (id),
    CONSTRAINT fk_collections_category FOREIGN KEY (category_id) REFERENCES product_categories (id)
);

CREATE TABLE collection_items (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    collection_id BIGINT NOT NULL,
    master_product_id BIGINT NOT NULL,
    collection_status VARCHAR(30) NOT NULL,
    physical_condition VARCHAR(30),
    unit_number VARCHAR(50),
    total_limited_units INTEGER,
    notes TEXT,
    acquired_at DATE,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by BIGINT,
    updated_at TIMESTAMPTZ,
    updated_by BIGINT,
    deleted_at TIMESTAMPTZ,
    deleted_by BIGINT,
    CONSTRAINT fk_collection_items_collection FOREIGN KEY (collection_id) REFERENCES collections (id),
    CONSTRAINT fk_collection_items_master_product FOREIGN KEY (master_product_id) REFERENCES master_products (id),
    CONSTRAINT chk_collection_items_total_limited_units_positive CHECK (total_limited_units IS NULL OR total_limited_units > 0)
);

CREATE TABLE reservations (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL,
    shop_id BIGINT NOT NULL,
    shop_product_id BIGINT NOT NULL,
    quantity INTEGER NOT NULL DEFAULT 1,
    status VARCHAR(30) NOT NULL DEFAULT 'PENDING',
    user_message TEXT,
    shop_response TEXT,
    expires_at TIMESTAMPTZ,
    completed_at TIMESTAMPTZ,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by BIGINT,
    updated_at TIMESTAMPTZ,
    updated_by BIGINT,
    deleted_at TIMESTAMPTZ,
    deleted_by BIGINT,
    CONSTRAINT fk_reservations_user FOREIGN KEY (user_id) REFERENCES users (id),
    CONSTRAINT fk_reservations_shop FOREIGN KEY (shop_id) REFERENCES shops (id),
    CONSTRAINT fk_reservations_shop_product FOREIGN KEY (shop_product_id) REFERENCES shop_products (id),
    CONSTRAINT chk_reservations_quantity_positive CHECK (quantity > 0)
);

CREATE INDEX idx_shops_owner_user_id ON shops (owner_user_id);
CREATE INDEX idx_shop_products_shop_id ON shop_products (shop_id);
CREATE INDEX idx_shop_products_master_product_id ON shop_products (master_product_id);
CREATE INDEX idx_master_products_isbn ON master_products (isbn);
CREATE INDEX idx_master_products_ean ON master_products (ean);
CREATE INDEX idx_master_products_name ON master_products (name);
CREATE INDEX idx_master_products_franchise ON master_products (franchise);
CREATE INDEX idx_collections_user_id ON collections (user_id);
CREATE INDEX idx_collection_items_collection_id ON collection_items (collection_id);
CREATE INDEX idx_collection_items_master_product_id ON collection_items (master_product_id);
CREATE INDEX idx_reservations_user_id ON reservations (user_id);
CREATE INDEX idx_reservations_shop_id ON reservations (shop_id);
CREATE INDEX idx_reservations_status ON reservations (status);

--rollback DROP TABLE IF EXISTS reservations, collection_items, collections, shop_products, product_suggestions, master_products, product_categories, shop_members, shops, user_roles, roles, users CASCADE;
