--liquibase formatted sql

--changeset codex:010-create-catalog-creators
CREATE TABLE creators (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(255) NOT NULL,
    slug VARCHAR(255) NOT NULL,
    sort_name VARCHAR(255),
    biography TEXT,
    country VARCHAR(2),
    birth_year INTEGER,
    death_year INTEGER,
    record_status VARCHAR(30) NOT NULL DEFAULT 'DRAFT',
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by BIGINT,
    updated_at TIMESTAMPTZ,
    updated_by BIGINT,
    deleted_at TIMESTAMPTZ,
    deleted_by BIGINT,
    CONSTRAINT chk_creators_record_status CHECK (record_status IN ('DRAFT', 'ACTIVE', 'ARCHIVED')),
    CONSTRAINT chk_creators_birth_year CHECK (birth_year IS NULL OR birth_year >= 0),
    CONSTRAINT chk_creators_death_year CHECK (death_year IS NULL OR death_year >= 0),
    CONSTRAINT chk_creators_year_range CHECK (death_year IS NULL OR birth_year IS NULL OR death_year >= birth_year),
    CONSTRAINT chk_creators_country CHECK (country IS NULL OR length(country) = 2)
);

CREATE TABLE catalog_item_creators (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    catalog_item_id BIGINT NOT NULL,
    creator_id BIGINT NOT NULL,
    credit_role VARCHAR(40) NOT NULL,
    credit_order INTEGER NOT NULL DEFAULT 1,
    credit_label VARCHAR(255),
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_by BIGINT,
    updated_at TIMESTAMPTZ,
    updated_by BIGINT,
    deleted_at TIMESTAMPTZ,
    deleted_by BIGINT,
    CONSTRAINT fk_catalog_item_creators_item FOREIGN KEY (catalog_item_id) REFERENCES catalog_items (id),
    CONSTRAINT fk_catalog_item_creators_creator FOREIGN KEY (creator_id) REFERENCES creators (id),
    CONSTRAINT chk_catalog_item_creators_role CHECK (credit_role IN ('AUTHOR','WRITER','ARTIST','ILLUSTRATOR','TRANSLATOR','EDITOR','OTHER')),
    CONSTRAINT chk_catalog_item_creators_order CHECK (credit_order > 0)
);

CREATE UNIQUE INDEX uk_creators_slug_active ON creators (slug) WHERE deleted_at IS NULL;
CREATE INDEX idx_creators_slug ON creators (slug);
CREATE INDEX idx_creators_record_status ON creators (record_status);
CREATE INDEX idx_creators_name_lower ON creators (LOWER(name));
CREATE UNIQUE INDEX uk_catalog_item_creators_active
    ON catalog_item_creators (catalog_item_id, creator_id, credit_role) WHERE deleted_at IS NULL;
CREATE INDEX idx_catalog_item_creators_item_id ON catalog_item_creators (catalog_item_id);
CREATE INDEX idx_catalog_item_creators_creator_id ON catalog_item_creators (creator_id);
CREATE INDEX idx_catalog_item_creators_role ON catalog_item_creators (credit_role);
CREATE INDEX idx_catalog_item_creators_order ON catalog_item_creators (credit_order);

--rollback DROP TABLE IF EXISTS catalog_item_creators, creators CASCADE;
