erDiagram
    USERS {
        BIGINT id PK
        VARCHAR email UK
        VARCHAR password_hash
        VARCHAR display_name
        VARCHAR preferred_interface_language
        VARCHAR status
        TIMESTAMPTZ deleted_at
    }
    ROLES {
        BIGINT id PK
        VARCHAR code UK
        VARCHAR name
        TIMESTAMPTZ deleted_at
    }
    USER_ROLES {
        BIGINT user_id PK,FK
        BIGINT role_id PK,FK
    }
    REFRESH_TOKENS {
        BIGINT id PK
        BIGINT user_id FK
        VARCHAR token_hash UK
        TIMESTAMPTZ expires_at
        TIMESTAMPTZ revoked_at
        TIMESTAMPTZ deleted_at
    }
    PRODUCT_CATEGORIES {
        BIGINT id PK
        VARCHAR code UK
        VARCHAR name
        BIGINT parent_id FK
        TIMESTAMPTZ deleted_at
    }
    PUBLISHERS {
        BIGINT id PK
        VARCHAR name
        VARCHAR country
        VARCHAR record_status
        BIGINT created_by
        TIMESTAMPTZ deleted_at
    }
    CATALOG_FRANCHISES {
        BIGINT id PK
        VARCHAR name
        VARCHAR slug UK
        VARCHAR record_status
        BIGINT created_by
        TIMESTAMPTZ deleted_at
    }
    CATALOG_SERIES {
        BIGINT id PK
        BIGINT franchise_id FK
        BIGINT primary_publisher_id FK
        VARCHAR title
        VARCHAR type
        VARCHAR publication_status
        VARCHAR record_status
        INTEGER start_year
        INTEGER end_year
        TIMESTAMPTZ deleted_at
    }
    CATALOG_ITEMS {
        BIGINT id PK
        BIGINT series_id FK
        VARCHAR title
        VARCHAR sequence_label
        NUMERIC sort_order
        INTEGER first_publication_year
        VARCHAR record_status
        TIMESTAMPTZ deleted_at
    }
    CATALOG_ITEM_EDITIONS {
        BIGINT id PK
        BIGINT catalog_item_id FK
        BIGINT publisher_id FK
        VARCHAR isbn UK
        VARCHAR ean UK
        VARCHAR format
        INTEGER publication_year
        VARCHAR record_status
        TIMESTAMPTZ deleted_at
    }
    CREATORS {
        BIGINT id PK
        VARCHAR name
        VARCHAR slug UK
        VARCHAR sort_name
        VARCHAR country
        INTEGER birth_year
        INTEGER death_year
        VARCHAR record_status
        TIMESTAMPTZ deleted_at
    }
    CATALOG_ITEM_CREATORS {
        BIGINT id PK
        BIGINT catalog_item_id FK
        BIGINT creator_id FK
        VARCHAR credit_role
        INTEGER credit_order
        VARCHAR credit_label
        TIMESTAMPTZ deleted_at
    }
    CATALOG_ITEM_RELATIONSHIPS {
        BIGINT id PK
        BIGINT source_catalog_item_id FK
        BIGINT target_catalog_item_id FK
        VARCHAR relationship_type
        INTEGER relationship_order
        VARCHAR record_status
        TIMESTAMPTZ deleted_at
    }
    MASTER_PRODUCT_CATALOG_LINKS {
        BIGINT id PK
        BIGINT master_product_id FK
        BIGINT catalog_item_id FK
        BIGINT catalog_item_edition_id FK
        VARCHAR link_status
        VARCHAR link_source
        NUMERIC confidence_score
        TIMESTAMPTZ deleted_at
    }
    MASTER_PRODUCTS {
        BIGINT id PK
        BIGINT category_id FK
        VARCHAR name
        VARCHAR isbn
        VARCHAR ean
        VARCHAR status
        JSONB publication_countries
        JSONB attributes
        TIMESTAMPTZ deleted_at
    }
    PRODUCT_SUGGESTIONS {
        BIGINT id PK
        BIGINT suggested_by_user_id FK
        BIGINT reviewed_by_user_id FK
        VARCHAR name
        JSONB data
        VARCHAR status
        TIMESTAMPTZ deleted_at
    }
    COLLECTIONS {
        BIGINT id PK
        BIGINT user_id FK
        BIGINT category_id FK
        VARCHAR name
        VARCHAR visibility
        TIMESTAMPTZ deleted_at
    }
    COLLECTION_ITEMS {
        BIGINT id PK
        BIGINT collection_id FK
        BIGINT master_product_id FK
        BIGINT catalog_item_id FK
        BIGINT catalog_item_edition_id FK
        VARCHAR editorial_reference_source
        VARCHAR collection_status
        VARCHAR physical_condition
        TIMESTAMPTZ deleted_at
    }
    SHOPS {
        BIGINT id PK
        BIGINT owner_user_id FK
        VARCHAR name
        VARCHAR currency
        VARCHAR status
        TIMESTAMPTZ deleted_at
    }
    SHOP_MEMBERS {
        BIGINT id PK
        BIGINT shop_id FK
        BIGINT user_id FK
        VARCHAR role
        VARCHAR status
        TIMESTAMPTZ deleted_at
    }
    SHOP_PRODUCTS {
        BIGINT id PK
        BIGINT shop_id FK
        BIGINT master_product_id FK
        BIGINT catalog_item_id FK
        BIGINT catalog_item_edition_id FK
        VARCHAR editorial_reference_source
        NUMERIC price_amount
        INTEGER stock_quantity
        VARCHAR commercial_status
        BOOLEAN visible
        TIMESTAMPTZ deleted_at
    }
    RESERVATIONS {
        BIGINT id PK
        BIGINT user_id FK
        BIGINT shop_id FK
        BIGINT shop_product_id FK
        INTEGER quantity
        VARCHAR status
        TIMESTAMPTZ expires_at
        TIMESTAMPTZ deleted_at
    }

    USERS ||--o{ USER_ROLES : has
    ROLES ||--o{ USER_ROLES : grants
    USERS ||--o{ REFRESH_TOKENS : owns
    USERS ||--o{ SHOPS : owns
    SHOPS ||--o{ SHOP_MEMBERS : has
    USERS ||--o{ SHOP_MEMBERS : joins
    PRODUCT_CATEGORIES o|--o{ PRODUCT_CATEGORIES : parent_of
    PRODUCT_CATEGORIES ||--o{ MASTER_PRODUCTS : classifies
    CATALOG_FRANCHISES o|--o{ CATALOG_SERIES : groups
    PUBLISHERS o|--o{ CATALOG_SERIES : primary_publisher
    CATALOG_SERIES ||--o{ CATALOG_ITEMS : contains
    CATALOG_ITEMS ||--o{ CATALOG_ITEM_EDITIONS : publishes_as
    PUBLISHERS o|--o{ CATALOG_ITEM_EDITIONS : publishes
    CATALOG_ITEMS ||--o{ CATALOG_ITEM_CREATORS : credits
    CREATORS ||--o{ CATALOG_ITEM_CREATORS : credited_as
    CATALOG_ITEMS ||--o{ CATALOG_ITEM_RELATIONSHIPS : source
    CATALOG_ITEMS ||--o{ CATALOG_ITEM_RELATIONSHIPS : target
    MASTER_PRODUCTS ||--o{ MASTER_PRODUCT_CATALOG_LINKS : reconciles
    CATALOG_ITEMS ||--o{ MASTER_PRODUCT_CATALOG_LINKS : identifies
    CATALOG_ITEM_EDITIONS o|--o{ MASTER_PRODUCT_CATALOG_LINKS : specifies
    USERS ||--o{ PRODUCT_SUGGESTIONS : suggests
    USERS o|--o{ PRODUCT_SUGGESTIONS : reviews
    USERS ||--o{ COLLECTIONS : owns
    PRODUCT_CATEGORIES o|--o{ COLLECTIONS : scopes
    COLLECTIONS ||--o{ COLLECTION_ITEMS : contains
    MASTER_PRODUCTS ||--o{ COLLECTION_ITEMS : identifies
    SHOPS ||--o{ SHOP_PRODUCTS : stocks
    MASTER_PRODUCTS ||--o{ SHOP_PRODUCTS : identifies
    CATALOG_ITEMS ||--o{ SHOP_PRODUCTS : identifies
    CATALOG_ITEM_EDITIONS o|--o{ SHOP_PRODUCTS : specifies
    USERS ||--o{ RESERVATIONS : places
    SHOPS ||--o{ RESERVATIONS : receives
    SHOP_PRODUCTS ||--o{ RESERVATIONS : reserves

%% Recommendations have no persisted table. RecommendationService calculates
%% matches from COLLECTION_ITEMS and available SHOP_PRODUCTS by edition, item
%% or legacy master product.
